--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1510,8 +1510,8 @@ background-color : rgb(200,149,47);
          <widget class="QPushButton" name="ig">
           <property name="geometry">
            <rect>
-            <x>50</x>
-            <y>230</y>
+            <x>40</x>
+            <y>350</y>
             <width>181</width>
             <height>71</height>
            </rect>
@@ -1539,7 +1539,7 @@ background-color : rgb(200,149,47);
           <property name="geometry">
            <rect>
             <x>280</x>
-            <y>230</y>
+            <y>350</y>
             <width>181</width>
             <height>71</height>
            </rect>
@@ -1566,8 +1566,8 @@ background-color : rgb(200,149,47);
          <widget class="QPushButton" name="linkedin">
           <property name="geometry">
            <rect>
-            <x>500</x>
-            <y>230</y>
+            <x>520</x>
+            <y>350</y>
             <width>181</width>
             <height>71</height>
            </rect>
@@ -1591,32 +1591,61 @@ background-color : rgb(200,149,47);
            <string>linkedin</string>
           </property>
          </widget>
-         <widget class="QPushButton" name="mail">
+         <widget class="QLabel" name="label_20">
+          <property name="geometry">
+           <rect>
+            <x>30</x>
+            <y>110</y>
+            <width>211</width>
+            <height>211</height>
+           </rect>
+          </property>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="pixmap">
+           <pixmap>ig.png</pixmap>
+          </property>
+          <property name="scaledContents">
+           <bool>true</bool>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_24">
           <property name="geometry">
            <rect>
             <x>270</x>
-            <y>90</y>
-            <width>181</width>
-            <height>71</height>
+            <y>110</y>
+            <width>211</width>
+            <height>211</height>
            </rect>
           </property>
-          <property name="styleSheet">
-           <string notr="true">QPushButton
-{background-color: rgb(200,133,0);
-color : white;
-font: 10pt Arial;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-border: 2px solid rgb(200,133,0);
-}
-
-QPushButton:hover {
-border: 2px solid rgb(200,146,0);
-background-color : rgb(200,149,47);
-}</string>
+          <property name="text">
+           <string/>
+          </property>
+          <property name="pixmap">
+           <pixmap>fb.png</pixmap>
+          </property>
+          <property name="scaledContents">
+           <bool>true</bool>
+          </property>
+         </widget>
+         <widget class="QLabel" name="label_27">
+          <property name="geometry">
+           <rect>
+            <x>520</x>
+            <y>120</y>
+            <width>191</width>
+            <height>191</height>
+           </rect>
           </property>
           <property name="text">
-           <string>mail</string>
+           <string/>
+          </property>
+          <property name="pixmap">
+           <pixmap>linkedin.png</pixmap>
+          </property>
+          <property name="scaledContents">
+           <bool>true</bool>
           </property>
          </widget>
         </widget>
