--- a/video.ui
+++ b/video.ui
@@ -1,17 +1,46 @@
+<?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
  <class>video</class>
- <widget name="video" class="QDialog">
+ <widget class="QDialog" name="video">
   <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>300</height>
+    <width>658</width>
+    <height>467</height>
    </rect>
   </property>
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <widget class="QPushButton" name="pushButton">
+   <property name="geometry">
+    <rect>
+     <x>340</x>
+     <y>200</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true">QPushButton
+{
+url(:/new/prefix1/audio_02.jpg)
+}</string>
+   </property>
+   <property name="text">
+    <string>PushButton</string>
+   </property>
+  </widget>
+  <action name="actionPlay">
+   <property name="icon">
+    <iconset>
+     <normaloff>:/new/prefix1/audio_02.jpg</normaloff>:/new/prefix1/audio_02.jpg</iconset>
+   </property>
+   <property name="text">
+    <string>Play</string>
+   </property>
+  </action>
  </widget>
  <resources/>
  <connections/>
