--- a/login.ui
+++ b/login.ui
@@ -36,8 +36,8 @@
   <widget class="QPushButton" name="login_2">
    <property name="geometry">
     <rect>
-     <x>370</x>
-     <y>380</y>
+     <x>360</x>
+     <y>490</y>
      <width>171</width>
      <height>51</height>
     </rect>
@@ -83,6 +83,29 @@
    </property>
    <property name="text">
     <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;&lt;span style=&quot; font-size:6pt; color:#000000;&quot;&gt;TextLabel&lt;/span&gt;&lt;/p&gt;&lt;/body&gt;&lt;/html&gt;</string>
+   </property>
+  </widget>
+  <widget class="QLineEdit" name="type">
+   <property name="geometry">
+    <rect>
+     <x>320</x>
+     <y>380</y>
+     <width>271</width>
+     <height>51</height>
+    </rect>
+   </property>
+  </widget>
+  <widget class="QLabel" name="label_4">
+   <property name="geometry">
+    <rect>
+     <x>190</x>
+     <y>400</y>
+     <width>91</width>
+     <height>21</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Function</string>
    </property>
   </widget>
  </widget>
