--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -17,18 +17,18 @@
    <widget class="QTabWidget" name="tabWidget_2">
     <property name="geometry">
      <rect>
-      <x>10</x>
-      <y>20</y>
-      <width>961</width>
+      <x>0</x>
+      <y>0</y>
+      <width>971</width>
       <height>631</height>
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="tab_3">
      <attribute name="title">
-      <string>Show Property</string>
+      <string>Security</string>
      </attribute>
      <widget class="QFrame" name="frame">
       <property name="geometry">
@@ -52,158 +52,76 @@
      <widget class="QStackedWidget" name="stackedWidget">
       <property name="geometry">
        <rect>
-        <x>0</x>
+        <x>10</x>
         <y>0</y>
         <width>831</width>
         <height>561</height>
        </rect>
       </property>
       <widget class="QWidget" name="page">
-       <widget class="QPushButton" name="pushButton_4_databaseprop">
-        <property name="geometry">
-         <rect>
-          <x>630</x>
-          <y>470</y>
-          <width>181</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">QPushButton
-{background-color: rgb(200,133,0);
-color : white;
-font: 10pt Arial;
-            border-radius: 4px;
-            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
-border: 2px solid rgb(200,133,0);
-}
-
-QPushButton:hover {
-border: 2px solid rgb(200,146,0);
-background-color : rgb(200,149,47);
-}</string>
-        </property>
-        <property name="text">
-         <string>DatabaseConnectionProp</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton">
-        <property name="geometry">
-         <rect>
-          <x>560</x>
-          <y>140</y>
-          <width>75</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">color: rgb(255, 255, 255);</string>
-        </property>
-        <property name="text">
-         <string>valider</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_3">
-        <property name="geometry">
-         <rect>
-          <x>230</x>
-          <y>200</y>
-          <width>150</width>
-          <height>36</height>
-         </rect>
-        </property>
-        <property name="cursor">
-         <cursorShape>PointingHandCursor</cursorShape>
-        </property>
-        <property name="styleSheet">
-         <string notr="true"/>
-        </property>
-        <property name="text">
-         <string/>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_2">
-        <property name="geometry">
-         <rect>
-          <x>560</x>
-          <y>170</y>
-          <width>75</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">color: rgb(255, 255, 255);</string>
-        </property>
-        <property name="text">
-         <string>quitter</string>
-        </property>
-       </widget>
-       <widget class="QPushButton" name="pushButton_4">
-        <property name="geometry">
-         <rect>
-          <x>560</x>
-          <y>290</y>
-          <width>75</width>
-          <height>23</height>
-         </rect>
-        </property>
-        <property name="styleSheet">
-         <string notr="true">color: rgb(255, 255, 255);</string>
-        </property>
-        <property name="text">
-         <string>map</string>
-        </property>
-       </widget>
        <widget class="QPushButton" name="pushButton_18">
         <property name="geometry">
          <rect>
-          <x>100</x>
-          <y>390</y>
+          <x>370</x>
+          <y>110</y>
           <width>75</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
-         <string>arduino1</string>
+         <string>Yes</string>
         </property>
        </widget>
        <widget class="QPushButton" name="pushButton_19">
         <property name="geometry">
          <rect>
-          <x>220</x>
-          <y>390</y>
+          <x>510</x>
+          <y>110</y>
           <width>75</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
-         <string>arduino2</string>
+         <string>No</string>
         </property>
        </widget>
        <widget class="QPushButton" name="pushButton_20">
         <property name="geometry">
          <rect>
-          <x>100</x>
-          <y>450</y>
+          <x>50</x>
+          <y>60</y>
           <width>75</width>
           <height>23</height>
          </rect>
         </property>
         <property name="text">
-         <string>arduino3</string>
+         <string>View IMAGE</string>
         </property>
        </widget>
-       <widget class="QPushButton" name="pushButton_21">
+       <widget class="QLabel" name="label_13">
         <property name="geometry">
          <rect>
-          <x>230</x>
-          <y>450</y>
-          <width>75</width>
-          <height>23</height>
+          <x>40</x>
+          <y>20</y>
+          <width>301</width>
+          <height>41</height>
          </rect>
         </property>
         <property name="text">
-         <string>arduino4</string>
+         <string>No one Is Detected</string>
+        </property>
+       </widget>
+       <widget class="QLabel" name="label_14">
+        <property name="geometry">
+         <rect>
+          <x>40</x>
+          <y>100</y>
+          <width>311</width>
+          <height>71</height>
+         </rect>
+        </property>
+        <property name="text">
+         <string>No One is Detected to launch alarm</string>
         </property>
        </widget>
       </widget>
@@ -302,13 +220,53 @@ background-color : rgb(200,149,47);
        </item>
        <item row="5" column="0">
         <widget class="QPushButton" name="pushButton_22">
+         <property name="styleSheet">
+          <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
+         </property>
          <property name="text">
-          <string>addvideopath</string>
+          <string>Add Video</string>
          </property>
         </widget>
        </item>
        <item row="5" column="1">
         <widget class="QLineEdit" name="lineEdit"/>
+       </item>
+       <item row="6" column="0">
+        <widget class="QPushButton" name="pushButton_14">
+         <property name="styleSheet">
+          <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
+         </property>
+         <property name="text">
+          <string>Add Image</string>
+         </property>
+        </widget>
+       </item>
+       <item row="6" column="1">
+        <widget class="QLineEdit" name="lineEdit_2"/>
        </item>
       </layout>
      </widget>
@@ -354,59 +312,11 @@ background-color : rgb(200,149,47);
 QTableView::item:focus{selection-background-color: yellow;}
 
 
- QScrollBar{
-         background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 #fff, stop: 1 #eee,stop: 0.5 #ddd,stop: 1 #eee );
- }
+ 
 
- QScrollBar:vertical {
-     border: 3px solid #5E749C;
-     padding: 4px;
-     border-radius: 7px;
-     border-bottom-left-radius: 7px;
-     background: QLinearGradient( x1: 0, y1: 0, x2: 1, y2: 0,stop: 0 #fff, stop: 1 #eee,stop: 0.5 #ddd,stop: 1 #eee );
-     width: 45px;
-     margin: 48px 0 48px 0;
- }
+ 
 
- QScrollBar::handle:vertical {
-     background: dark blue;
-     border: 3px solid #5E749C;
-     padding: 0px;
-     border-radius: 7px;
-     border-bottom-left-radius: 7px;
-     min-height: 40px;
- }
- QScrollBar::add-line:vertical {
-     background: dark blue;
-     border: 3px solid #5E749C;
-     padding: 0px;
-     border-radius: 7px;
-     border-bottom-left-radius: 7px;
-     height: 40px;
-     subcontrol-position: bottom;
-     subcontrol-origin: margin;
- }
-
- QScrollBar::sub-line:vertical {
-     background: dark blue;
-     border: 3px solid #5E749C;
-     padding: 0px;
-     border-radius: 7px;
-     border-bottom-left-radius: 7px;
-     height: 40px;
-     subcontrol-position: top;
-     subcontrol-origin: margin;
- }
- QScrollBar::up-arrow:vertical, QScrollBar::down-arrow:vertical {
-     border: 2px solid grey;
-     width: 3px;
-     height: 3px;
-     background: white;
- }
-
- QScrollBar::add-page:vertical, QScrollBar::sub-page:vertical {
-     background: none;
- }</string>
+</string>
       </property>
      </widget>
      <widget class="QPushButton" name="pushButton_6">
@@ -435,19 +345,6 @@ background-color : rgb(200,149,47);
       </property>
       <property name="text">
        <string>Delete Property</string>
-      </property>
-     </widget>
-     <widget class="QLineEdit" name="lineEdit_delete_prop">
-      <property name="geometry">
-       <rect>
-        <x>750</x>
-        <y>510</y>
-        <width>116</width>
-        <height>20</height>
-       </rect>
-      </property>
-      <property name="styleSheet">
-       <string notr="true">color : rgb(255, 255, 255) ;</string>
       </property>
      </widget>
      <widget class="QComboBox" name="comboBox">
@@ -715,7 +612,7 @@ background-color : rgb(200,149,47);
       <property name="geometry">
        <rect>
         <x>850</x>
-        <y>30</y>
+        <y>0</y>
         <width>81</width>
         <height>23</height>
        </rect>
@@ -743,7 +640,7 @@ background-color : rgb(200,149,47);
       <property name="geometry">
        <rect>
         <x>850</x>
-        <y>70</y>
+        <y>30</y>
         <width>81</width>
         <height>23</height>
        </rect>
@@ -771,7 +668,7 @@ background-color : rgb(200,149,47);
       <property name="geometry">
        <rect>
         <x>850</x>
-        <y>110</y>
+        <y>60</y>
         <width>81</width>
         <height>23</height>
        </rect>
@@ -803,6 +700,9 @@ background-color : rgb(200,149,47);
         <width>431</width>
         <height>141</height>
        </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color: rgb(255,255,255);</string>
       </property>
      </widget>
      <widget class="QLabel" name="label_12">
@@ -847,6 +747,75 @@ background-color : rgb(200,149,47);
       </property>
       <property name="text">
        <string>Empty</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_15">
+      <property name="geometry">
+       <rect>
+        <x>850</x>
+        <y>100</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
+      </property>
+      <property name="text">
+       <string>Pause Video</string>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="pushButton_23">
+      <property name="geometry">
+       <rect>
+        <x>850</x>
+        <y>150</y>
+        <width>101</width>
+        <height>31</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">QPushButton
+{background-color: rgb(200,133,0);
+color : white;
+font: 10pt Arial;
+            border-radius: 4px;
+            text-shadow: 0 1px 1px rgba(0, 0, 0, 0.2);
+border: 2px solid rgb(200,133,0);
+}
+
+QPushButton:hover {
+border: 2px solid rgb(200,146,0);
+background-color : rgb(200,149,47);
+}</string>
+      </property>
+      <property name="text">
+       <string>Play Video</string>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_4">
+      <property name="geometry">
+       <rect>
+        <x>760</x>
+        <y>510</y>
+        <width>101</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">color : rgb(255,255,255);</string>
       </property>
      </widget>
     </widget>
