--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -1711,6 +1711,76 @@ background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 
         <normaloff>../logout.png</normaloff>../logout.png</iconset>
       </property>
      </widget>
+     <widget class="QPushButton" name="pushButton_24">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>440</y>
+        <width>221</width>
+        <height>51</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 rgba(254, 171, 66, 255),stop:1 rgba(255, 153, 0, 255));
+	color: #000;
+	font-size: 14pt;
+	border-radius: 4px;
+	padding: 10px;
+</string>
+      </property>
+      <property name="text">
+       <string>Previous page</string>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../Previous page.png</normaloff>../Previous page.png</iconset>
+      </property>
+     </widget>
+     <widget class="QLineEdit" name="lineEdit_login_3">
+      <property name="geometry">
+       <rect>
+        <x>800</x>
+        <y>430</y>
+        <width>113</width>
+        <height>22</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QComboBox" name="comboBox_2">
+      <property name="geometry">
+       <rect>
+        <x>782</x>
+        <y>341</y>
+        <width>141</width>
+        <height>51</height>
+       </rect>
+      </property>
+     </widget>
+     <widget class="QPushButton" name="combo">
+      <property name="geometry">
+       <rect>
+        <x>480</x>
+        <y>440</y>
+        <width>51</width>
+        <height>21</height>
+       </rect>
+      </property>
+      <property name="styleSheet">
+       <string notr="true">background-color: qlineargradient(spread:repeat, x1:1, y1:0, x2:1, y2:1, stop:0 rgba(254, 171, 66, 255),stop:1 rgba(255, 153, 0, 255));
+	color: #000;
+	font-size: 14pt;
+	border-radius: 4px;
+	padding: 10px;
+</string>
+      </property>
+      <property name="text">
+       <string>send message</string>
+      </property>
+      <property name="icon">
+       <iconset>
+        <normaloff>../logout.png</normaloff>../logout.png</iconset>
+      </property>
+     </widget>
     </widget>
    </widget>
   </widget>
